parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_
Rule 2     np_goto_ -> <empty>
Rule 3     np_push_global_vars_ -> <empty>
Rule 4     prog_funcs -> funcion prog_funcs
Rule 5     prog_funcs -> empty
Rule 6     variables -> VAR variables_2
Rule 7     variables -> empty
Rule 8     variables_2 -> tipo COLON lista_id SEMICOLON variables_rep
Rule 9     variables_rep -> variables_2
Rule 10    variables_rep -> empty
Rule 11    lista_id -> ID dimension_var lista_id_rep
Rule 12    lista_id_rep -> COMMA lista_id
Rule 13    lista_id_rep -> empty
Rule 14    dimension_var -> SQUAREL CTE_INT SQUARER
Rule 15    dimension_var -> empty
Rule 16    tipo -> INT
Rule 17    tipo -> FLOAT
Rule 18    tipo -> STRING
Rule 19    func_princ -> PRINCIPAL np_start_main_ PARENTHESESL PARENTHESESR CURLYL estatuto_rep CURLYR
Rule 20    np_start_main_ -> <empty>
Rule 21    np_end_program_ -> <empty>
Rule 22    funcion -> FUNC tipo_func ID np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
Rule 23    tipo_func -> tipo
Rule 24    tipo_func -> VOID
Rule 25    np_set_scope_ -> <empty>
Rule 26    np_add_func_to_directory_ -> <empty>
Rule 27    np_add_vars_to_table_ -> <empty>
Rule 28    np_end_function_ -> <empty>
Rule 29    funcion_param -> tipo ID funcion_param_rep
Rule 30    funcion_param -> empty
Rule 31    funcion_param_rep -> COMMA funcion_param
Rule 32    funcion_param_rep -> empty
Rule 33    estatuto_rep -> estatuto estatuto_rep
Rule 34    estatuto_rep -> empty
Rule 35    estatuto -> asignacion SEMICOLON
Rule 36    estatuto -> llamada SEMICOLON np_llamada_void_
Rule 37    estatuto -> retorno SEMICOLON
Rule 38    estatuto -> lectura SEMICOLON
Rule 39    estatuto -> escritura SEMICOLON
Rule 40    estatuto -> decision
Rule 41    estatuto -> rep_c
Rule 42    estatuto -> rep_nc
Rule 43    np_llamada_void_ -> <empty>
Rule 44    np_quadruple_IO_ -> <empty>
Rule 45    np_push_var_ -> <empty>
Rule 46    np_push_operator_ -> <empty>
Rule 47    np_pop_operator_ -> <empty>
Rule 48    asignacion -> ID np_push_var_ dimension ASSIGN np_push_operator_ expresion np_quadruple_assignment_
Rule 49    np_quadruple_assignment_ -> <empty>
Rule 50    dimension -> SQUAREL np_verify_dimensions_ np_add_false_bottom_ expresion np_manage_array_ np_remove_false_bottom_ SQUARER
Rule 51    dimension -> empty
Rule 52    np_verify_dimensions_ -> <empty>
Rule 53    np_manage_array_ -> <empty>
Rule 54    llamada -> ID np_verify_function_ PARENTHESESL np_add_false_bottom_ np_create_era_ expresion_rep np_end_of_parameters_ PARENTHESESR np_remove_false_bottom_ np_create_gosub_
Rule 55    np_verify_function_ -> <empty>
Rule 56    expresion_rep -> expresion_rep_2
Rule 57    expresion_rep -> empty
Rule 58    expresion_rep_2 -> expresion np_next_parameter_check_ np_verify_parameters_ COMMA expresion_rep_2
Rule 59    expresion_rep_2 -> expresion np_next_parameter_check_ np_verify_parameters_
Rule 60    np_verify_parameters_ -> <empty>
Rule 61    np_next_parameter_check_ -> <empty>
Rule 62    np_end_of_parameters_ -> <empty>
Rule 63    np_create_era_ -> <empty>
Rule 64    np_create_gosub_ -> <empty>
Rule 65    lectura -> READ np_push_operator_ PARENTHESESL lista_lectura PARENTHESESR np_pop_operator_
Rule 66    lista_lectura -> ID np_push_var_ dimension np_quadruple_IO_ COMMA lista_lectura
Rule 67    lista_lectura -> ID np_push_var_ dimension np_quadruple_IO_
Rule 68    escritura -> PRINT np_push_operator_ PARENTHESESL lista_escritura PARENTHESESR np_pop_operator_
Rule 69    lista_escritura -> expresion np_quadruple_IO_ lista_escritura_rep
Rule 70    lista_escritura_rep -> COMMA lista_escritura
Rule 71    lista_escritura_rep -> empty
Rule 72    decision -> IF PARENTHESESL expresion PARENTHESESR np_gotoF_ THEN CURLYL estatuto_rep CURLYR decision_alt
Rule 73    decision_alt -> ELSE np_false_condition_ CURLYL estatuto_rep CURLYR np_end_if_actions
Rule 74    decision_alt -> empty np_end_if_actions
Rule 75    np_gotoF_ -> <empty>
Rule 76    np_false_condition_ -> <empty>
Rule 77    np_end_if_actions -> <empty>
Rule 78    rep_c -> WHILE np_push_jump_ PARENTHESESL expresion PARENTHESESR np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_while_actions_
Rule 79    np_push_jump_ -> <empty>
Rule 80    np_end_while_actions_ -> <empty>
Rule 81    rep_nc -> FROM ID np_push_var_ dimension ASSIGN expresion np_assign_loop_ UNTIL expresion np_quadruple_for_ np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_for_actions
Rule 82    np_assign_loop_ -> <empty>
Rule 83    np_quadruple_for_ -> np_push_jump_
Rule 84    np_end_for_actions -> np_increment_temp_ np_end_while_actions_
Rule 85    np_increment_temp_ -> <empty>
Rule 86    retorno -> RETURN PARENTHESESL expresion PARENTHESESR np_quadruple_return_
Rule 87    retorno -> RETURN PARENTHESESL PARENTHESESR np_quadruple_empty_return_
Rule 88    np_quadruple_return_ -> <empty>
Rule 89    np_quadruple_empty_return_ -> <empty>
Rule 90    expresion -> exp_comp np_quadruple_logic_ expresion_2
Rule 91    expresion_2 -> AND np_push_operator_ expresion
Rule 92    expresion_2 -> OR np_push_operator_ expresion
Rule 93    expresion_2 -> empty
Rule 94    np_quadruple_logic_ -> <empty>
Rule 95    exp_comp -> exp_ar exp_comp_2
Rule 96    exp_comp_2 -> comp_sym np_push_operator_ exp_ar np_quadruple_compare_
Rule 97    exp_comp_2 -> empty
Rule 98    np_quadruple_compare_ -> <empty>
Rule 99    comp_sym -> LESSTHAN
Rule 100   comp_sym -> GREATERTHAN
Rule 101   comp_sym -> LESSEQUAL
Rule 102   comp_sym -> GREATEREQUAL
Rule 103   comp_sym -> EQUAL
Rule 104   comp_sym -> NOTEQUAL
Rule 105   exp_ar -> termino np_quadruple_term exp_ar_2
Rule 106   exp_ar_2 -> PLUS np_push_operator_ exp_ar
Rule 107   exp_ar_2 -> MINUS np_push_operator_ exp_ar
Rule 108   exp_ar_2 -> empty
Rule 109   np_quadruple_term -> <empty>
Rule 110   termino -> unary np_quadruple_factor_ termino_2
Rule 111   termino_2 -> MULT np_push_operator_ termino
Rule 112   termino_2 -> DIVIDE np_push_operator_ termino
Rule 113   termino_2 -> empty
Rule 114   np_quadruple_factor_ -> <empty>
Rule 115   unary -> factor
Rule 116   unary -> MINUS np_push_operator_ unary change_sign
Rule 117   unary -> PLUS unary
Rule 118   change_sign -> <empty>
Rule 119   factor -> const
Rule 120   factor -> ID np_push_var_ dimension
Rule 121   factor -> PARENTHESESL np_add_false_bottom_ expresion PARENTHESESR np_remove_false_bottom_
Rule 122   factor -> llamada
Rule 123   np_add_false_bottom_ -> <empty>
Rule 124   np_remove_false_bottom_ -> <empty>
Rule 125   const -> CTE_INT np_push_const_int_
Rule 126   const -> CTE_STR np_push_const_string_
Rule 127   const -> CTE_FLOAT np_push_const_float_
Rule 128   np_push_const_int_ -> <empty>
Rule 129   np_push_const_float_ -> <empty>
Rule 130   np_push_const_string_ -> <empty>
Rule 131   empty -> <empty>

Terminals, with rules where they appear

AND                  : 91
ASSIGN               : 48 81
COLON                : 8
COMMA                : 12 31 58 66 70
CTE_FLOAT            : 127
CTE_INT              : 14 125
CTE_STR              : 126
CURLYL               : 19 22 72 73 78 81
CURLYR               : 19 22 72 73 78 81
DIVIDE               : 112
DO                   : 78 81
ELSE                 : 73
EQUAL                : 103
FLOAT                : 17
FROM                 : 81
FUNC                 : 22
GREATEREQUAL         : 102
GREATERTHAN          : 100
ID                   : 1 11 22 29 48 54 66 67 81 120
IF                   : 72
INT                  : 16
LESSEQUAL            : 101
LESSTHAN             : 99
MINUS                : 107 116
MULT                 : 111
NOTEQUAL             : 104
OR                   : 92
PARENTHESESL         : 19 22 54 65 68 72 78 86 87 121
PARENTHESESR         : 19 22 54 65 68 72 78 86 87 121
PLUS                 : 106 117
PRINCIPAL            : 19
PRINT                : 68
PROGRAM              : 1
READ                 : 65
RETURN               : 86 87
SEMICOLON            : 1 8 22 35 36 37 38 39
SQUAREL              : 14 50
SQUARER              : 14 50
STRING               : 18
THEN                 : 72
UNTIL                : 81
VAR                  : 6
VOID                 : 24
WHILE                : 78
error                : 

Nonterminals, with rules where they appear

asignacion           : 35
change_sign          : 116
comp_sym             : 96
const                : 119
decision             : 40
decision_alt         : 72
dimension            : 48 66 67 81 120
dimension_var        : 11
empty                : 5 7 10 13 15 30 32 34 51 57 71 74 93 97 108 113
escritura            : 39
estatuto             : 33
estatuto_rep         : 19 22 33 72 73 78 81
exp_ar               : 95 96 106 107
exp_ar_2             : 105
exp_comp             : 90
exp_comp_2           : 95
expresion            : 48 50 58 59 69 72 78 81 81 86 91 92 121
expresion_2          : 90
expresion_rep        : 54
expresion_rep_2      : 56 58
factor               : 115
func_princ           : 1
funcion              : 4
funcion_param        : 22 31
funcion_param_rep    : 29
lectura              : 38
lista_escritura      : 68 70
lista_escritura_rep  : 69
lista_id             : 8 12
lista_id_rep         : 11
lista_lectura        : 65 66
llamada              : 36 122
np_add_false_bottom_ : 50 54 121
np_add_func_to_directory_ : 22
np_add_vars_to_table_ : 22
np_assign_loop_      : 81
np_create_era_       : 54
np_create_gosub_     : 54
np_end_for_actions   : 81
np_end_function_     : 22
np_end_if_actions    : 73 74
np_end_of_parameters_ : 54
np_end_program_      : 1
np_end_while_actions_ : 78 84
np_false_condition_  : 73
np_gotoF_            : 72 78 81
np_goto_             : 1
np_increment_temp_   : 84
np_llamada_void_     : 36
np_manage_array_     : 50
np_next_parameter_check_ : 58 59
np_pop_operator_     : 65 68
np_push_const_float_ : 127
np_push_const_int_   : 125
np_push_const_string_ : 126
np_push_global_vars_ : 1
np_push_jump_        : 78 83
np_push_operator_    : 48 65 68 91 92 96 106 107 111 112 116
np_push_var_         : 48 66 67 81 120
np_quadruple_IO_     : 66 67 69
np_quadruple_assignment_ : 48
np_quadruple_compare_ : 96
np_quadruple_empty_return_ : 87
np_quadruple_factor_ : 110
np_quadruple_for_    : 81
np_quadruple_logic_  : 90
np_quadruple_return_ : 86
np_quadruple_term    : 105
np_remove_false_bottom_ : 50 54 121
np_set_scope_        : 22
np_start_main_       : 19
np_verify_dimensions_ : 50
np_verify_function_  : 54
np_verify_parameters_ : 58 59
prog                 : 0
prog_funcs           : 1 4
rep_c                : 41
rep_nc               : 42
retorno              : 37
termino              : 105 111 112
termino_2            : 110
tipo                 : 8 23 29
tipo_func            : 22
unary                : 110 116 117
variables            : 1 22
variables_2          : 6 9
variables_rep        : 8

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_

    PROGRAM         shift and go to state 2

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .



state 2

    (1) prog -> PROGRAM . ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_

    ID              shift and go to state 3


state 3

    (1) prog -> PROGRAM ID . np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_
    (2) np_goto_ -> .

    SEMICOLON       reduce using rule 2 (np_goto_ -> .)

    np_goto_                       shift and go to state 4

state 4

    (1) prog -> PROGRAM ID np_goto_ . SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_

    SEMICOLON       shift and go to state 5


state 5

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON . variables np_push_global_vars_ prog_funcs func_princ np_end_program_
    (6) variables -> . VAR variables_2
    (7) variables -> . empty
    (131) empty -> .

    VAR             shift and go to state 7
    FUNC            reduce using rule 131 (empty -> .)
    PRINCIPAL       reduce using rule 131 (empty -> .)

    variables                      shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON variables . np_push_global_vars_ prog_funcs func_princ np_end_program_
    (3) np_push_global_vars_ -> .

    FUNC            reduce using rule 3 (np_push_global_vars_ -> .)
    PRINCIPAL       reduce using rule 3 (np_push_global_vars_ -> .)

    np_push_global_vars_           shift and go to state 9

state 7

    (6) variables -> VAR . variables_2
    (8) variables_2 -> . tipo COLON lista_id SEMICOLON variables_rep
    (16) tipo -> . INT
    (17) tipo -> . FLOAT
    (18) tipo -> . STRING

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14

    variables_2                    shift and go to state 10
    tipo                           shift and go to state 11

state 8

    (7) variables -> empty .

    FUNC            reduce using rule 7 (variables -> empty .)
    PRINCIPAL       reduce using rule 7 (variables -> empty .)
    CURLYL          reduce using rule 7 (variables -> empty .)


state 9

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ . prog_funcs func_princ np_end_program_
    (4) prog_funcs -> . funcion prog_funcs
    (5) prog_funcs -> . empty
    (22) funcion -> . FUNC tipo_func ID np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (131) empty -> .

    FUNC            shift and go to state 18
    PRINCIPAL       reduce using rule 131 (empty -> .)

    prog_funcs                     shift and go to state 15
    funcion                        shift and go to state 16
    empty                          shift and go to state 17

state 10

    (6) variables -> VAR variables_2 .

    FUNC            reduce using rule 6 (variables -> VAR variables_2 .)
    PRINCIPAL       reduce using rule 6 (variables -> VAR variables_2 .)
    CURLYL          reduce using rule 6 (variables -> VAR variables_2 .)


state 11

    (8) variables_2 -> tipo . COLON lista_id SEMICOLON variables_rep

    COLON           shift and go to state 19


state 12

    (16) tipo -> INT .

    COLON           reduce using rule 16 (tipo -> INT .)
    ID              reduce using rule 16 (tipo -> INT .)


state 13

    (17) tipo -> FLOAT .

    COLON           reduce using rule 17 (tipo -> FLOAT .)
    ID              reduce using rule 17 (tipo -> FLOAT .)


state 14

    (18) tipo -> STRING .

    COLON           reduce using rule 18 (tipo -> STRING .)
    ID              reduce using rule 18 (tipo -> STRING .)


state 15

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs . func_princ np_end_program_
    (19) func_princ -> . PRINCIPAL np_start_main_ PARENTHESESL PARENTHESESR CURLYL estatuto_rep CURLYR

    PRINCIPAL       shift and go to state 21

    func_princ                     shift and go to state 20

state 16

    (4) prog_funcs -> funcion . prog_funcs
    (4) prog_funcs -> . funcion prog_funcs
    (5) prog_funcs -> . empty
    (22) funcion -> . FUNC tipo_func ID np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (131) empty -> .

    FUNC            shift and go to state 18
    PRINCIPAL       reduce using rule 131 (empty -> .)

    funcion                        shift and go to state 16
    prog_funcs                     shift and go to state 22
    empty                          shift and go to state 17

state 17

    (5) prog_funcs -> empty .

    PRINCIPAL       reduce using rule 5 (prog_funcs -> empty .)


state 18

    (22) funcion -> FUNC . tipo_func ID np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (23) tipo_func -> . tipo
    (24) tipo_func -> . VOID
    (16) tipo -> . INT
    (17) tipo -> . FLOAT
    (18) tipo -> . STRING

    VOID            shift and go to state 25
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14

    tipo_func                      shift and go to state 23
    tipo                           shift and go to state 24

state 19

    (8) variables_2 -> tipo COLON . lista_id SEMICOLON variables_rep
    (11) lista_id -> . ID dimension_var lista_id_rep

    ID              shift and go to state 27

    lista_id                       shift and go to state 26

state 20

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ . np_end_program_
    (21) np_end_program_ -> .

    $end            reduce using rule 21 (np_end_program_ -> .)

    np_end_program_                shift and go to state 28

state 21

    (19) func_princ -> PRINCIPAL . np_start_main_ PARENTHESESL PARENTHESESR CURLYL estatuto_rep CURLYR
    (20) np_start_main_ -> .

    PARENTHESESL    reduce using rule 20 (np_start_main_ -> .)

    np_start_main_                 shift and go to state 29

state 22

    (4) prog_funcs -> funcion prog_funcs .

    PRINCIPAL       reduce using rule 4 (prog_funcs -> funcion prog_funcs .)


state 23

    (22) funcion -> FUNC tipo_func . ID np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_

    ID              shift and go to state 30


state 24

    (23) tipo_func -> tipo .

    ID              reduce using rule 23 (tipo_func -> tipo .)


state 25

    (24) tipo_func -> VOID .

    ID              reduce using rule 24 (tipo_func -> VOID .)


state 26

    (8) variables_2 -> tipo COLON lista_id . SEMICOLON variables_rep

    SEMICOLON       shift and go to state 31


state 27

    (11) lista_id -> ID . dimension_var lista_id_rep
    (14) dimension_var -> . SQUAREL CTE_INT SQUARER
    (15) dimension_var -> . empty
    (131) empty -> .

    SQUAREL         shift and go to state 33
    COMMA           reduce using rule 131 (empty -> .)
    SEMICOLON       reduce using rule 131 (empty -> .)

    dimension_var                  shift and go to state 32
    empty                          shift and go to state 34

state 28

    (1) prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_ .

    $end            reduce using rule 1 (prog -> PROGRAM ID np_goto_ SEMICOLON variables np_push_global_vars_ prog_funcs func_princ np_end_program_ .)


state 29

    (19) func_princ -> PRINCIPAL np_start_main_ . PARENTHESESL PARENTHESESR CURLYL estatuto_rep CURLYR

    PARENTHESESL    shift and go to state 35


state 30

    (22) funcion -> FUNC tipo_func ID . np_set_scope_ PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (25) np_set_scope_ -> .

    PARENTHESESL    reduce using rule 25 (np_set_scope_ -> .)

    np_set_scope_                  shift and go to state 36

state 31

    (8) variables_2 -> tipo COLON lista_id SEMICOLON . variables_rep
    (9) variables_rep -> . variables_2
    (10) variables_rep -> . empty
    (8) variables_2 -> . tipo COLON lista_id SEMICOLON variables_rep
    (131) empty -> .
    (16) tipo -> . INT
    (17) tipo -> . FLOAT
    (18) tipo -> . STRING

    FUNC            reduce using rule 131 (empty -> .)
    PRINCIPAL       reduce using rule 131 (empty -> .)
    CURLYL          reduce using rule 131 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14

    tipo                           shift and go to state 11
    variables_rep                  shift and go to state 37
    variables_2                    shift and go to state 38
    empty                          shift and go to state 39

state 32

    (11) lista_id -> ID dimension_var . lista_id_rep
    (12) lista_id_rep -> . COMMA lista_id
    (13) lista_id_rep -> . empty
    (131) empty -> .

    COMMA           shift and go to state 41
    SEMICOLON       reduce using rule 131 (empty -> .)

    lista_id_rep                   shift and go to state 40
    empty                          shift and go to state 42

state 33

    (14) dimension_var -> SQUAREL . CTE_INT SQUARER

    CTE_INT         shift and go to state 43


state 34

    (15) dimension_var -> empty .

    COMMA           reduce using rule 15 (dimension_var -> empty .)
    SEMICOLON       reduce using rule 15 (dimension_var -> empty .)


state 35

    (19) func_princ -> PRINCIPAL np_start_main_ PARENTHESESL . PARENTHESESR CURLYL estatuto_rep CURLYR

    PARENTHESESR    shift and go to state 44


state 36

    (22) funcion -> FUNC tipo_func ID np_set_scope_ . PARENTHESESL funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_

    PARENTHESESL    shift and go to state 45


state 37

    (8) variables_2 -> tipo COLON lista_id SEMICOLON variables_rep .

    FUNC            reduce using rule 8 (variables_2 -> tipo COLON lista_id SEMICOLON variables_rep .)
    PRINCIPAL       reduce using rule 8 (variables_2 -> tipo COLON lista_id SEMICOLON variables_rep .)
    CURLYL          reduce using rule 8 (variables_2 -> tipo COLON lista_id SEMICOLON variables_rep .)


state 38

    (9) variables_rep -> variables_2 .

    FUNC            reduce using rule 9 (variables_rep -> variables_2 .)
    PRINCIPAL       reduce using rule 9 (variables_rep -> variables_2 .)
    CURLYL          reduce using rule 9 (variables_rep -> variables_2 .)


state 39

    (10) variables_rep -> empty .

    FUNC            reduce using rule 10 (variables_rep -> empty .)
    PRINCIPAL       reduce using rule 10 (variables_rep -> empty .)
    CURLYL          reduce using rule 10 (variables_rep -> empty .)


state 40

    (11) lista_id -> ID dimension_var lista_id_rep .

    SEMICOLON       reduce using rule 11 (lista_id -> ID dimension_var lista_id_rep .)


state 41

    (12) lista_id_rep -> COMMA . lista_id
    (11) lista_id -> . ID dimension_var lista_id_rep

    ID              shift and go to state 27

    lista_id                       shift and go to state 46

state 42

    (13) lista_id_rep -> empty .

    SEMICOLON       reduce using rule 13 (lista_id_rep -> empty .)


state 43

    (14) dimension_var -> SQUAREL CTE_INT . SQUARER

    SQUARER         shift and go to state 47


state 44

    (19) func_princ -> PRINCIPAL np_start_main_ PARENTHESESL PARENTHESESR . CURLYL estatuto_rep CURLYR

    CURLYL          shift and go to state 48


state 45

    (22) funcion -> FUNC tipo_func ID np_set_scope_ PARENTHESESL . funcion_param np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (29) funcion_param -> . tipo ID funcion_param_rep
    (30) funcion_param -> . empty
    (16) tipo -> . INT
    (17) tipo -> . FLOAT
    (18) tipo -> . STRING
    (131) empty -> .

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    PARENTHESESR    reduce using rule 131 (empty -> .)

    funcion_param                  shift and go to state 49
    tipo                           shift and go to state 50
    empty                          shift and go to state 51

state 46

    (12) lista_id_rep -> COMMA lista_id .

    SEMICOLON       reduce using rule 12 (lista_id_rep -> COMMA lista_id .)


state 47

    (14) dimension_var -> SQUAREL CTE_INT SQUARER .

    COMMA           reduce using rule 14 (dimension_var -> SQUAREL CTE_INT SQUARER .)
    SEMICOLON       reduce using rule 14 (dimension_var -> SQUAREL CTE_INT SQUARER .)


state 48

    (19) func_princ -> PRINCIPAL np_start_main_ PARENTHESESL PARENTHESESR CURLYL . estatuto_rep CURLYR
    (33) estatuto_rep -> . estatuto estatuto_rep
    (34) estatuto_rep -> . empty
    (35) estatuto -> . asignacion SEMICOLON
    (36) estatuto -> . llamada SEMICOLON np_llamada_void_
    (37) estatuto -> . retorno SEMICOLON
    (38) estatuto -> . lectura SEMICOLON
    (39) estatuto -> . escritura SEMICOLON
    (40) estatuto -> . decision
    (41) estatuto -> . rep_c
    (42) estatuto -> . rep_nc
    (131) empty -> .
    (48) asignacion -> . ID np_push_var_ dimension ASSIGN np_push_operator_ expresion np_quadruple_assignment_
    (54) llamada -> . ID np_verify_function_ PARENTHESESL np_add_false_bottom_ np_create_era_ expresion_rep np_end_of_parameters_ PARENTHESESR np_remove_false_bottom_ np_create_gosub_
    (86) retorno -> . RETURN PARENTHESESL expresion PARENTHESESR np_quadruple_return_
    (87) retorno -> . RETURN PARENTHESESL PARENTHESESR np_quadruple_empty_return_
    (65) lectura -> . READ np_push_operator_ PARENTHESESL lista_lectura PARENTHESESR np_pop_operator_
    (68) escritura -> . PRINT np_push_operator_ PARENTHESESL lista_escritura PARENTHESESR np_pop_operator_
    (72) decision -> . IF PARENTHESESL expresion PARENTHESESR np_gotoF_ THEN CURLYL estatuto_rep CURLYR decision_alt
    (78) rep_c -> . WHILE np_push_jump_ PARENTHESESL expresion PARENTHESESR np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_while_actions_
    (81) rep_nc -> . FROM ID np_push_var_ dimension ASSIGN expresion np_assign_loop_ UNTIL expresion np_quadruple_for_ np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_for_actions

    CURLYR          reduce using rule 131 (empty -> .)
    ID              shift and go to state 63
    RETURN          shift and go to state 64
    READ            shift and go to state 65
    PRINT           shift and go to state 66
    IF              shift and go to state 67
    WHILE           shift and go to state 68
    FROM            shift and go to state 69

    estatuto_rep                   shift and go to state 52
    estatuto                       shift and go to state 53
    empty                          shift and go to state 54
    asignacion                     shift and go to state 55
    llamada                        shift and go to state 56
    retorno                        shift and go to state 57
    lectura                        shift and go to state 58
    escritura                      shift and go to state 59
    decision                       shift and go to state 60
    rep_c                          shift and go to state 61
    rep_nc                         shift and go to state 62

state 49

    (22) funcion -> FUNC tipo_func ID np_set_scope_ PARENTHESESL funcion_param . np_add_func_to_directory_ PARENTHESESR SEMICOLON variables np_add_vars_to_table_ CURLYL estatuto_rep CURLYR np_end_function_
    (26) np_add_func_to_directory_ -> .

    PARENTHESESR    reduce using rule 26 (np_add_func_to_directory_ -> .)

    np_add_func_to_directory_      shift and go to state 70

state 50

    (29) funcion_param -> tipo . ID funcion_param_rep

    ID              shift and go to state 71


state 51

    (30) funcion_param -> empty .

    PARENTHESESR    reduce using rule 30 (funcion_param -> empty .)


state 52

    (19) func_princ -> PRINCIPAL np_start_main_ PARENTHESESL PARENTHESESR CURLYL estatuto_rep . CURLYR

    CURLYR          shift and go to state 72


state 53

    (33) estatuto_rep -> estatuto . estatuto_rep
    (33) estatuto_rep -> . estatuto estatuto_rep
    (34) estatuto_rep -> . empty
    (35) estatuto -> . asignacion SEMICOLON
    (36) estatuto -> . llamada SEMICOLON np_llamada_void_
    (37) estatuto -> . retorno SEMICOLON
    (38) estatuto -> . lectura SEMICOLON
    (39) estatuto -> . escritura SEMICOLON
    (40) estatuto -> . decision
    (41) estatuto -> . rep_c
    (42) estatuto -> . rep_nc
    (131) empty -> .
    (48) asignacion -> . ID np_push_var_ dimension ASSIGN np_push_operator_ expresion np_quadruple_assignment_
    (54) llamada -> . ID np_verify_function_ PARENTHESESL np_add_false_bottom_ np_create_era_ expresion_rep np_end_of_parameters_ PARENTHESESR np_remove_false_bottom_ np_create_gosub_
    (86) retorno -> . RETURN PARENTHESESL expresion PARENTHESESR np_quadruple_return_
    (87) retorno -> . RETURN PARENTHESESL PARENTHESESR np_quadruple_empty_return_
    (65) lectura -> . READ np_push_operator_ PARENTHESESL lista_lectura PARENTHESESR np_pop_operator_
    (68) escritura -> . PRINT np_push_operator_ PARENTHESESL lista_escritura PARENTHESESR np_pop_operator_
    (72) decision -> . IF PARENTHESESL expresion PARENTHESESR np_gotoF_ THEN CURLYL estatuto_rep CURLYR decision_alt
    (78) rep_c -> . WHILE np_push_jump_ PARENTHESESL expresion PARENTHESESR np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_while_actions_
    (81) rep_nc -> . FROM ID np_push_var_ dimension ASSIGN expresion np_assign_loop_ UNTIL expresion np_quadruple_for_ np_gotoF_ DO CURLYL estatuto_rep CURLYR np_end_for_actions

    CURLYR          reduce using rule 131 (empty -> .)
    ID              shift and go to state 63
    RETURN          shift and go to state 64
    READ            shift and go to state 65
    PRINT           shift and go to state 66
    IF              shift and go to state 67
    WHILE           shift and go to state 68
    FROM            shift and go to state 69

    estatuto                       shift and go to state 53
    estatuto_rep                   shift and go to state 73
    empty                          shift and go to state 54
    asignacion                     shift and go to state 55
    llamada                        shift and go to state 56
    retorno                        shift and go to state 57
    lectura                        shift and go to state 58
    escritura                      shift and go to state 59
    decision                       shift and go to state 60
    rep_c                          shift and go to state 61
    rep_nc                         shift and go to state 62

state 54

    (34) estatuto_rep -> empty .

    CURLYR          reduce using rule 34 (estatuto_rep -> empty .)


state 55

    (35) estatuto -> asignacion . SEMICOLON

    SEMICOLON       shift and go to state 74


state 56

    (36) estatuto -> llamada . SEMICOLON np_llamada_void_

    SEMICOLON       shift and go to state 75


state 57

    (37) estatuto -> retorno . SEMICOLON

    SEMICOLON       shift and go to state 76


state 58

    (38) estatuto -> lectura . SEMICOLON

    SEMICOLON       shift and go to state 77


state 59

    (39) estatuto -> escritura . SEMICOLON

    SEMICOLON       shift and go to state 78


state 60

    (40) estatuto -> decision .

    ID              reduce using rule 40 (estatuto -> decision .)
    RETURN          reduce using rule 40 (estatuto -> decision .)
    READ            reduce using rule 40 (estatuto -> decision .)
    PRINT           reduce using rule 40 (estatuto -> decision .)
    IF              reduce using rule 40 (estatuto -> decision .)
    WHILE           reduce using rule 40 (estatuto -> decision .)
    FROM            reduce using rule 40 (estatuto -> decision .)
    CURLYR          reduce using rule 40 (estatuto -> decision .)


state 61

    (41) estatuto -> rep_c .

    ID              reduce using rule 41 (estatuto -> rep_c .)
    RETURN          reduce using rule 41 (estatuto -> rep_c .)
    READ            reduce using rule 41 (estatuto -> rep_c .)
    PRINT           reduce using rule 41 (estatuto -> rep_c .)
    IF              reduce using rule 41 (estatuto -> rep_c .)
    WHILE           reduce using rule 41 (estatuto -> rep_c .)
    FROM            reduce using rule 41 (estatuto -> rep_c .)
    CURLYR          reduce using rule 41 (estatuto -> rep_c .)


state 62

    (42) estatuto -> rep_nc .
